<resources>
    <string name="app_name">DevHour</string>
    <string name="account">060498623801</string>
    <string name="client_id">1kiho7pmmv5c410i5in3m8ulu7</string>
    <string name="provider_name">us-west-1_aJtem6cJA</string>
    <string name="auth_endpoint">cognito-idp.us-west-1.amazonaws.com</string>
    <string name="region">us-west-1</string>
    <string name="user_table_name">userTestTableAlpha</string>
    <string name="diet_table_name">dietTestTableAlpha</string>
    <string name="menu_table_name">menuTestTableAlpha</string>
    <string name="meal_table_name">mealTestTableAlpha</string>
    <string name="meal_bucket_name">mealtestbucketalpha</string>
    <string name="restaurant_table_name">restaurantTestTableAlpha</string>
    <string name="restaurant_bucket_name">restauranttestbucketalpha</string>
    <string name="identity_pool_id">us-west-1:1c896551-75af-487f-b8d6-0fcb7c67786a</string>
    <string name="bottom_navigation_location">Location</string>
    <string name="bottom_navigation_list">List</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGV2aG91ciIsImEiOiJjbDkzMHB3bG8xYzVlM3ZsZmsxdzU1ZmdjIn0.9sq-L_XAU4zyrf7ROSHOqQ</string>
    <string name="user">User</string>
    <string name="restaurant">Restaurant</string>
    <string name="store">Store</string>
    <string name="cafe">Cafe</string>

    <!-- ============== -->
    <!-- Login Fragment -->

    <string name="fragment_login_title_text">Login</string>
    <string name="fragment_login_email_input_hint">Email</string>
    <string name="fragment_login_password_input_hint">Password</string>
    <string name="fragment_login_sign_in_button_text">Sign-In</string>
    <string name="fragment_login_no_account_text">Don\'t have an account?</string>
    <string name="fragment_login_create_account_text">Create One</string>
    <string name="fragment_login_forgot_title_text">Forgot Email or Password?</string>
    <string name="fragment_login_reset_title_text">Reset</string>
    <string name="fragment_login_message_account_creation">Failed to create account</string>
    <string name="fragment_login_message_weak_password">Invalid password; must be at least 6 characters</string>
    <string name="fragment_login_message_invalid_email">Invalid email address</string>
    <string name="fragment_login_message_user_exists">Account creation failed, user already exists</string>
    <string name="fragment_login_message_invalid_credentials">Sign-In failed; Check user name or password</string>
    <string name="fragment_login_message_invalid_user">Sign-In failed; User does not exist</string>
    <string name="fragment_login_message_sign_in_failure">Sign-In failed</string>
    <string name="fragment_login_message_account_blocked_requests">Too many requests; account blocked - Try again later</string>

    <!-- ======================= -->
    <!-- Create Account Fragment -->

    <string name="fragment_create_account_password_invalid">Password invalid</string>
    <string name="fragment_create_account_title_text">Create Account</string>
    <string name="fragment_create_account_username_input_hint_text">Username</string>
    <string name="fragment_create_account_email_input_hint_text">Email</string>
    <string name="fragment_create_account_password_input_hint_text">Password (At least 6 Characters)</string>
    <string name="fragment_create_account_first_name_input_hint_text">First Name</string>
    <string name="fragment_create_account_last_name_input_hint_text">Last Name</string>
    <string name="fragment_create_account_create_account_button_text">Create Account</string>
    <string name="fragment_create_account_create_account_invalid_email_message">Invalid Email</string>
    <string name="fragment_create_account_create_account_invalid_password_message">Invalid Password - Length must at least 6 characters</string>
    <string name="fragment_create_account_create_account_invalid_first_name_message">Must provide a first name.</string>
    <string name="fragment_create_account_create_account_invalid_lase_name_message">Must provide a last name.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ================ -->
    <!-- List Item Remove -->

    <string name="list_item_remove">Remove</string>

    <!-- ==================== -->
    <!-- Add Picture Fragment -->

    <string name="fragment_add_picture_title">Add Picture</string>
    <string name="fragment_add_picture_user_image_description">User Image</string>
    <string name="fragment_add_picture_add_phone_number_error_message_title">Picture Upload Failed</string>
    <string name="fragment_add_picture_upload_button_title">Upload</string>
    <string name="fragment_add_picture_save_button_title">Save</string>
    <string name="fragment_add_picture_skip_button_title">Skip</string>
    <string name="done">Done</string>

</resources>