<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_sign_up_layout"
    style="@style/Fragment">

    <ImageButton
        android:id="@+id/fragment_sign_up_back_button"
        style="@style/Theme.DevHour.BackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/back_button_color_light"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/fragment_sign_up_account_title"
        style="@style/Theme.DevHour.Title"
        android:layout_marginTop="24dp"
        android:text="@string/fragment_create_account_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_back_button"/>

    <EditText
        android:id="@+id/fragment_sign_up_username_input"
        style="@style/Theme.DevHour.EditText"
        android:layout_marginTop="@dimen/fragment_login_email_input_margin_top"
        android:hint="@string/fragment_create_account_username_input_hint_text"
        android:inputType="text"
        android:autofillHints="Username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_account_title" />

    <EditText
        android:id="@+id/fragment_sign_up_email_input"
        style="@style/Theme.DevHour.EditText"
        android:layout_marginTop="@dimen/fragment_create_account_email_input_top_margin"
        android:hint="@string/fragment_create_account_email_input_hint_text"
        android:inputType="textEmailAddress"
        android:autofillHints="Email Address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_username_input" />


    <EditText
        android:id="@+id/fragment_sign_up_password_input"
        style="@style/Theme.DevHour.EditText"
        android:layout_marginTop="@dimen/fragment_create_account_password_input_top_margin"
        android:hint="@string/fragment_create_account_password_input_hint_text"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_email_input"/>

    <EditText
        android:id="@+id/fragment_sign_up_first_name_input"
        style="@style/Theme.DevHour.EditText"
        android:layout_marginTop="@dimen/fragment_create_account_first_name_input_top_margin"
        android:hint="@string/fragment_create_account_first_name_input_hint_text"
        android:inputType="text"
        android:autofillHints="First Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password_input" />

    <EditText
        android:id="@+id/fragment_sign_up_last_name_input"
        style="@style/Theme.DevHour.EditText"
        android:layout_marginTop="@dimen/fragment_create_account_last_name_input_top_margin"
        android:hint="@string/fragment_create_account_last_name_input_hint_text"
        android:inputType="text"
        android:autofillHints="Last Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_first_name_input" />

    <RadioGroup
        android:id="@+id/fragment_user_type_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_last_name_input" >

        <RadioButton
            android:id="@+id/customer_selection_button"
            style="@style/Theme.DevHour.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Customer"

            app:layout_constraintTop_toBottomOf="@id/customer_selection_button" />

        <RadioButton
            android:id="@+id/business_selection_button"
            style="@style/Theme.DevHour.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Business"
            app:layout_constraintTop_toBottomOf="@id/customer_selection_button" />

    </RadioGroup>

    <Button
        android:id="@+id/fragment_sign_up_create_account"
        style="@style/Theme.DevHour.ActionButton"
        android:layout_marginTop="40dp"
        android:text="@string/fragment_create_account_create_account_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_user_type_selection" />

</androidx.constraintlayout.widget.ConstraintLayout>